@@ -5,6 +5,9 @@ git-annex (0.22) UNRELEASED; urgency=low
     for his help eliminating the infestation... for now.)
   * Make test suite not rely on a working cp -pr.
     (The Unix wars are still ON!)
+  * Support filenames that start with a dash; when such a file is passed
+    to a utility it will be escaped to avoid it being interpreted as an
+    option.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 13 Feb 2011 00:48:02 -0400
 
